@@ -79,7 +79,7 @@ INPUT                  = @top_srcdir@/cairomm
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.h
 RECURSIVE              = NO
-EXCLUDE                = @top_srcdir@/cairomm/private.h
+EXCLUDE                = @top_srcdir@/cairomm/private.h @top_srcdir@/cairomm/context_private.h
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXCLUDE_SYMBOLS        = 
